--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon dist/index.js",
-    "tsc": "tsc --watch"
+    "tsc": "tsc --watch",
+    "start": "tsc && node dist/index.js"
   },
   "keywords": [],
   "author": "",
